--- a/Front/frontMusic/index.html
+++ b/Front/frontMusic/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<link rel="icon" type="image/png" href="/deezer.png" />
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700;1,800&family=Ubuntu:wght@300&family=Work+Sans:wght@100&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 	<script type="module" src="/src/main.jsx" defer></script>
