--- a/Front/frontMusic/index.html
+++ b/Front/frontMusic/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 	<script type="module" src="/src/main.jsx" defer></script>
-	<title>Music Clone</title>
+	<title>Deezer</title>
 </head>
 
 <body>
